Implementazione OrdineService e modifiche alla logica degli ordini